--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         <img id="img2" src="think_2.png">
         <textarea readonly id="error_msg"></textarea>
     </div>
+    <div id="ab">
+        <pre id="p1">Can i generate a Password for you....</pre>
+        <button id="b1" onclick="yes_genetrate()">Yes</button>
+        <button id="b2" onclick="no_generate()">Close</button>
+        <button id="b3" onclick="copy_pass()">Copy</button>
+        <input id="i1">
+    </div>
     <div id="b">
         <br>
         <div>
